# MyTinySTL

./: .clang-format  .gitignore  CMakeLists.txt
test/: algo_test.cpp  optional_test.cpp  test_pair.cpp  variant_test.cpp  vector_test.cpp
vince_stl/: algobase.h  allocator.h  config.h  construct.h  iterator.h  type_traits.h  uninitialized.h  util.h
wyne/: algobase.h  allocator.h  allocator_traits.h  assert.h  compressed_pair.h  config.h  construct.h  exceptdef.h  iterator.h  optional.h  split_buffer.h  type_traits.h  uninitialized.h  util.h  variant.h  vector.h
wyne/memory/: split_buffer.h  swap_allocator.h
wyne/type_traits/: common_type.h  concepts.h  in_place.h  integer_sequence.h  return_as.h  type_pack_element.h
